# yabackup

./: AUTHORS  ChangeLog  DISCLAIMER  FAQ  INSTALL  Makefile.am  NEWS  README  README.pod  TODO  acinclude.m4  bootstrap  configure.ac  configure.in
config/: vars.am
config/m4/: ac_prog_perl_modules.m4
doc/: INSTALL.pod.in  Makefile.am  README_HEADER.pod.in  yabackup.conf.example.in
etc/: backup.conf.example
icons/: README
icons/src/icns/: DownloadsFolder.icns  FileVaultIcon.icns  GenericAirDiskIcon.icns  GenericFileServerIcon.icns  Harddrive.icns  SharedComputers.icns  com.apple.imac-unibody-21.icns  com.apple.macbookpro-15-unibody.icns  com.apple.macmini.icns  com.apple.xserve.icns  iBackupApplicationIcon.icns  iDiskGenericIcon.icns
tests/: Makefile.am  check_dep.pl  iBackupCheck.pm.in  yaBackupCheck.pm.in
tests/iBackupCheck/: Config.pm
tests/t/: 00-use.t  01-init.t  02-modules.t  10-configfile.t  init.t  modules.t
tests/t/data/: create_md5sums.sh
tests/t/data/src-easy/: README  file.txt
tests/t/data/src-easy/.hiddendirectory/: secret
tests/t/data/src-easy/dir/subdir/: subfile.txt
tests/t/data/src-normal/: README  another_file  file.txt  my-ssh-pubkey
tests/t/data/src-normal/.hidden_directory/: current.src
tests/t/data/src-normal/.ssh/: id_dsa  id_dsa.pub
tests/t/data/src-normal/Desktop/: main.tex  my document.doc
tests/t/data/src-normal/UC_DIR/: Makefile  README  main.cpp
tests/yaBackupCheck/: Config.pm
www/: .dependances.sh  .wmkrc  .wmlrc.in  Makefile.am  bugs.wml  docs.wml  download.wml  features.wml  gforge.wml  index.wml  links.wml
www/include/: Makefile  andreas01.css  definitions.tag  main.wml  menu.tag  style.css  template.wml  wmlrc.default  wmlrc.default.in
